--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -10677,6 +10677,26 @@
     dl.webdav.substitution.char=^
 
 ##
+## DNS
+##
+
+    #
+    # Configure the seconds to wait for resolving an external domain,
+    # this limit helps to avoid possible DoS attacks to the Portal.
+    #
+    # Env: LIFERAY_DNS_PERIOD_SECURITY_PERIOD_ADDRESS_PERIOD_TIMEOUT_PERIOD_SECONDS
+    #
+    dns.security.address.timeout.seconds=2
+
+    #
+    # Configure the maximum number of threads when resolving an external domain,
+    # this limit helps to avoid possible DoS attacks to the Portal.
+    #
+    # Env: LIFERAY_DNS_PERIOD_SECURITY_PERIOD_THREAD_PERIOD_LIMIT
+    #
+    dns.security.thread.limit=10
+
+##
 ## IFrame Portlet
 ##
 
