--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language.properties
@@ -1,6 +1,5 @@
 a-subset-of-groups-has-been-displayed-for-you-to-review=A subset of groups has been displayed for you to review.
 a-subset-of-users-has-been-displayed-for-you-to-review=A subset of users has been displayed for you to review.
-account-created-notification-body-with-password-help=Enter the body of the email sent to users upon registration. This should contain the user's automatically generated password.
 account-created-notification-body-with-password-reset-help=Enter the body of the email sent to users upon registration. This should contain a link to set a new password.
 account-created-notification-body-without-password-help=Enter the body of the email sent to users upon registration. This does not contain the user's password.
 add-ldap-server=Add LDAP Server
@@ -49,6 +48,8 @@ domain-controller-name-help=Specify the domain controller NetBIOS name.
 edit-ldap-server=Edit LDAP Server
 email-address-attribute=Email Address Attribute
 email-sender=Email Sender
+email-with-password=Email with Password
+email-without-password=Email without Password
 enable-birthday=Enable Birthday
 enable-cdn-dynamic-resources=Enable CDN Dynamic Resources
 enable-export=Enable Export
@@ -87,6 +88,7 @@ ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled
 ldap-password-policy-help=Note that if this is enabled, the portal will not check for valid passwords, expired passwords, or users that are locked out. This is now handled by the LDAP server's password policy.
 ldap-server-name=Name
 ldap-servers=LDAP Servers
+legacy-template-no-longer-used=Legacy Template (No Longer Used)
 liferay-analytics-key=Liferay Analytics Key
 liferay-has-failed-to-connect-to-the-ldap-server=Liferay has failed to connect to the LDAP server. Please check your configuration and verify that the LDAP server is running.
 liferay-has-failed-to-connect-to-the-opensso-server=Liferay has failed to connect to the OpenSSO server. Please check your configuration and verify that the OpenSSO server is running.
@@ -121,6 +123,7 @@ reset-values=Reset Values
 screen-name-attribute=Screen Name Attribute
 screen-names=Screen Names
 select-the-default-ratings-type-for-the-following-applications=Select the default ratings type for the following applications. These values can be changed per site through Site Settings.
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded.
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 ssl-error=SSL Error
 system.ldap.configuration.name=System LDAP
@@ -147,5 +150,3 @@ use-ldap-password-policy=Use LDAP Password Policy
 user-mapping=User Mapping
 you-cannot-remove-a-language-that-is-the-current-default-language=You cannot remove a language that is the current default language.
 you-must-choose-a-default-language=You must choose a default language.
-email-with-password=Email with Password
-email-without-password=Email without Password
